# roam_environments

./: index.html  package-lock.json  package.json  tailwind.config.ts
backend/: README.md  pyproject.toml  requirements.txt
backend/assets/: asset:airport terminal:v1.glb  asset:airport terminal:v1.json  asset:airport walkway:v1.glb  asset:airport walkway:v1.json  asset:airport_background:v1.glb  asset:airport_background:v1.json  asset:airport_baggage_claim:v1.glb  asset:airport_baggage_claim:v1.json  asset:airport_bench:v1.glb  asset:airport_bench:v1.json  asset:airport_cargo_container:v1.glb  asset:airport_cargo_container:v1.json  asset:airport_charging_station:v1.glb  asset:airport_charging_station:v1.json  asset:airport_fence:v1.glb  asset:airport_fence:v1.json  asset:airport_fuel_station:v1.glb  asset:airport_fuel_station:v1.json  asset:airport_gate:v1.glb  asset:airport_gate:v1.json  asset:airport_lounge:v1.glb  asset:airport_lounge:v1.json  asset:airport_parking_stand:v1.glb  asset:airport_parking_stand:v1.json  asset:airport_restaurant:v1.json  asset:airport_road:v1.glb  asset:airport_road:v1.json  asset:airport_runway_light:v1.glb  asset:airport_runway_light:v1.json  asset:airport_runway_road:v1.json  asset:airport_security_checkpoint:v1.glb  asset:airport_security_checkpoint:v1.json  asset:airport_shop:v1.glb  asset:airport_shop:v1.json  asset:airport_sign:v1.glb  asset:airport_sign:v1.json  asset:airport_terminal:v1.json  asset:airport_terminal:v2.glb  asset:airport_terminal:v2.json  asset:airport_terminal:v3.glb  (+312 more)
backend/memory/: faiss.meta.json  memory.db
(+66 files in other folders)
